--- a/booking.html
+++ b/booking.html
@@ -313,7 +313,7 @@
                             <textarea class="form-textarea w-full px-4 py-3" id="specialReq" rows="4" placeholder="Any special requirements or notes..." maxlength="500"></textarea>
                         </div>
                     </div> -->
-
+                    <div class="err_msg"></div>
                     <!-- Buttons -->
                     <div class="space-y-3 pt-2">
                         <div id="passengerContainer" class="space-y-10 mt-10"></div>
