--- a/booking.html
+++ b/booking.html
@@ -322,6 +322,9 @@
                             Add Passenger
                         </button>
                         <!-- <div id="passengerContainer" class="space-y-4 mt-4"></div> -->
+                         <div id="priceBox" class="btn-secondary text-white w-full py-3 rounded-lg font-semibold text-center mb-2">
+                            Total Price: <span id="totalPrice">0</span> $
+                        </div>
 
                         <button type="submit" class="btn-primary text-white w-full py-3 rounded-lg font-semibold glow">
                             Confirm Booking
