--- a/booking.html
+++ b/booking.html
@@ -194,6 +194,7 @@
                 <a href="index.html" class="nav-link hover:text-neon-blue transition-colors">Home</a>
                 <a href="destinations.html" class="nav-link hover:text-neon-blue transition-colors">Destinations</a>
                 <a href="booking.html" class="nav-link hover:text-neon-blue transition-colors text-neon-blue">Booking</a>
+                <a href="mybooking.html" class="nav-link hover:text-neon-blue transition-colors text-neon-blue">My Bookings</a>
                 <a href="about.html" class="nav-link hover:text-neon-blue transition-colors">About</a>
                 <a href="login.html" class="nav-link hover:text-neon-blue transition-colors">Login</a>
             </div>
