--- a/login.html
+++ b/login.html
@@ -132,6 +132,7 @@
                 <a href="index.html" class="nav-link hover:text-neon-blue transition-colors">Home</a>
                 <a href="destinations.html" class="nav-link hover:text-neon-blue transition-colors">Destinations</a>
                 <a href="booking.html" class="nav-link hover:text-neon-blue transition-colors">Booking</a>
+                <a href="my-bookings.html" class="nav-link hover:text-neon-blue transition-colors text-neon-blue">My Bookings</a>
                 <a href="about.html" class="nav-link hover:text-neon-blue transition-colors">About</a>
                 <a href="login.html" class="nav-link hover:text-neon-blue transition-colors text-neon-blue">Login</a>
             </div>
